<?xml version="1.0" encoding="utf-8"?>
	<!--
		Copyright (C) 2009-2011 Felix Bechstein
	-->
	<!--
		This file is part of SMSdroid. This program is free software; you can
		redistribute it and/or modify it under the terms of the GNU General
		Public License as published by the Free Software Foundation; either
		version 3 of the License, or (at your option) any later version.
	-->
	<!--
		This program is distributed in the hope that it will be useful, but
		WITHOUT ANY WARRANTY; without even the implied warranty of
		MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU
		General Public License for more details. You should have received a
		copy of the GNU General Public License along with this program; If
		not, see <http://www.gnu.org/licenses/>.
	-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
	<ListPreference android:title="@string/theme_"
		android:key="theme" android:entries="@array/themes"
		android:entryValues="@array/themes_values" />
	<PreferenceScreen android:key="bubbles_in"
		android:title="@string/bubbles_in_" android:summary="@string/bubbles_in_hint" />
	<PreferenceScreen android:key="bubbles_out"
		android:title="@string/bubbles_out_" android:summary="@string/bubbles_out_hint" />
	<EditTextPreference android:key="textsizen"
		android:title="@string/textsize_" android:summary="@string/textsize_hint"
		android:inputType="number" />
	<PreferenceScreen android:key="textcolor"
		android:title="@string/textcolor_" android:summary="@string/textcolor_hint" />
	<CheckBoxPreference android:key="text_color_ignore_conv"
		android:title="@string/textcolor_ignore_conv_" android:summary="@string/textcolor_ignore_conv_hint" />
	<CheckBoxPreference android:key="show_contact_photo"
		android:title="@string/show_contact_photo_" android:summary="@string/show_contact_photo_hint" />
	<CheckBoxPreference android:key="show_emoticons"
		android:title="@string/show_emoticons_" android:summary="@string/show_emoticons_hint" />
	<CheckBoxPreference android:key="show_full_date"
		android:title="@string/show_full_date_" android:summary="@string/show_full_date_hint" />
	<CheckBoxPreference android:key="hide_send"
		android:title="@string/hide_send_" android:summary="@string/hide_send_hint" />
	<CheckBoxPreference android:key="hide_restore"
		android:title="@string/hide_restore_" android:summary="@string/hide_restore_hint" />
	<CheckBoxPreference android:key="hide_paste"
		android:title="@string/hide_paste_" android:summary="@string/hide_paste_hint" />
	<CheckBoxPreference android:key="hide_widget_label"
		android:title="@string/hide_widget_label_" android:summary="@string/hide_widget_label_hint" />
	<ListPreference android:key="morelocale" android:title="@string/custom_language_"
		android:summary="@string/custom_language_hint" android:entries="@array/lang_"
		android:entryValues="@array/lang_values" />
</PreferenceScreen>
