<?xml version="1.0" encoding="utf-8"?>
	<!--
		Copyright (C) 2009-2010 Felix Bechstein
	-->
	<!--
		This file is part of SMSdroid. This program is free software; you can
		redistribute it and/or modify it under the terms of the GNU General
		Public License as published by the Free Software Foundation; either
		version 3 of the License, or (at your option) any later version.
	-->
	<!--
		This program is distributed in the hope that it will be useful, but
		WITHOUT ANY WARRANTY; without even the implied warranty of
		MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU
		General Public License for more details. You should have received a
		copy of the GNU General Public License along with this program; If
		not, see <http://www.gnu.org/licenses/>.
	-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
	<PreferenceScreen android:title="@string/appearance_">
		<ListPreference android:title="@string/theme_"
			android:key="theme" android:entries="@array/themes"
			android:entryValues="@array/themes_values" />
		<EditTextPreference android:title="@string/textsize_"
			android:key="textsizen" android:summary="@string/textsize_hint" />
		<CheckBoxPreference android:key="show_titlebar"
			android:defaultValue="true" android:title="@string/show_titlebar_"
			android:summary="@string/show_titlebar_hint" />
		<CheckBoxPreference android:key="show_contact_photo"
			android:title="@string/show_contact_photo_" android:summary="@string/show_contact_photo_hint" />
		<CheckBoxPreference android:key="show_emoticons"
			android:title="@string/show_emoticons_" android:summary="@string/show_emoticons_hint" />
		<CheckBoxPreference android:key="show_bubbles"
			android:title="@string/show_bubbles_" />
		<CheckBoxPreference android:key="show_full_date"
			android:title="@string/show_full_date_" android:summary="@string/show_full_date_hint" />
		<CheckBoxPreference android:key="hide_paste"
			android:title="@string/hide_paste_" android:summary="@string/hide_paste_hint" />
		<ListPreference android:key="morelocale" android:title="@string/custom_language_"
			android:summary="@string/custom_language_hint" android:entries="@array/lang_"
			android:entryValues="@array/lang_values" />
	</PreferenceScreen>
	<PreferenceScreen android:title="@string/notification_">
		<CheckBoxPreference android:key="notification_enable"
			android:title="@string/notification_enable_" android:summary="@string/notification_enable_hint"
			android:defaultValue="true" />
		<RingtonePreference android:key="receive_sound"
			android:title="@string/receive_sound_" android:summary="@string/receive_sound_hint"
			android:ringtoneType="notification" android:defaultValue="content://settings/system/notification_sound"
			android:dependency="notification_enable" />
		<CheckBoxPreference android:key="receive_vibrate"
			android:title="@string/receive_vibrate_" android:summary="@string/receive_vibrate_hint"
			android:dependency="notification_enable" />
		<ListPreference android:key="receive_vibrate_mode"
			android:title="@string/receive_vibrate_mode_" android:entries="@array/vibrate_mode"
			android:entryValues="@array/vibrate_mode_values" android:dependency="receive_vibrate" />
		<ListPreference android:key="receive_led_color"
			android:title="@string/receive_led_color_" android:entries="@array/led_color"
			android:entryValues="@array/led_color_values" android:dependency="notification_enable" />
		<ListPreference android:key="receive_led_flash"
			android:title="@string/receive_led_flash_" android:summary="@string/receive_led_flash_hint"
			android:entries="@array/led_flash" android:entryValues="@array/led_flash_values"
			android:dependency="notification_enable" />
		<CheckBoxPreference android:key="receive_privacy"
			android:title="@string/receive_no_text_" android:summary="@string/receive_no_text_hint"
			android:dependency="notification_enable" />
	</PreferenceScreen>
	<PreferenceCategory android:title="@string/about_">
		<PreferenceScreen android:title="@string/about_"
			android:summary="@string/about_hint">
			<intent android:action="android.intent.action.MAIN"
				android:targetPackage="de.ub0r.android.smsdroid"
				android:targetClass="de.ub0r.android.smsdroid.About" />
		</PreferenceScreen>
		<PreferenceScreen android:title="@string/faq_"
			android:summary="@string/faq_hint">
			<intent android:action="android.intent.action.VIEW"
				android:data="http://code.google.com/p/websmsdroid/wiki/FAQ" />
		</PreferenceScreen>
		<PreferenceScreen android:title="@string/feedback_"
			android:summary="@string/feedback_hint">
			<intent android:action="android.intent.action.VIEW"
				android:data="http://code.google.com/p/websmsdroid/issues/list" />
		</PreferenceScreen>
		<PreferenceScreen android:title="@string/twitter_"
			android:summary="@string/twitter_hint">
			<intent android:action="android.intent.action.VIEW"
				android:data="http://twitter.com/flx_b" />
		</PreferenceScreen>
		<PreferenceScreen android:title="@string/more_apps_">
			<intent android:action="android.intent.action.VIEW"
				android:data="market://search?q=pub:&quot;Felix Bechstein&quot;" />
		</PreferenceScreen>
	</PreferenceCategory>
	<PreferenceCategory android:title="@string/debug_">
		<PreferenceScreen android:key="send_logs"
			android:title="@string/send_logs_" android:summary="@string/send_logs_hint" />
	</PreferenceCategory>
</PreferenceScreen>
