<?xml version="1.0" encoding="utf-8"?>
	<!--
		Copyright (C) 2009-2010 Felix Bechstein
	-->
	<!--
		This file is part of SMSdroid. This program is free software; you can
		redistribute it and/or modify it under the terms of the GNU General
		Public License as published by the Free Software Foundation; either
		version 3 of the License, or (at your option) any later version.
	-->
	<!--
		This program is distributed in the hope that it will be useful, but
		WITHOUT ANY WARRANTY; without even the implied warranty of
		MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU
		General Public License for more details. You should have received a
		copy of the GNU General Public License along with this program; If
		not, see <http://www.gnu.org/licenses/>.
	-->
<menu xmlns:android="http://schemas.android.com/apk/res/android">
	<item android:title="@string/compose_" android:id="@+id/item_compose"
		android:icon="@drawable/ic_menu_compose" android:orderInCategory="1" />
	<item android:title="@string/reply" android:id="@+id/item_answer"
		android:icon="@drawable/android:ic_menu_send" android:orderInCategory="2" />
	<item android:title="@string/call" android:id="@+id/item_call"
		android:icon="@drawable/android:ic_menu_call" android:orderInCategory="3" />
	<item android:title="@string/all_threads_" android:id="@+id/item_all_threads"
		android:icon="@android:drawable/ic_menu_view" android:orderInCategory="4" />
	<item android:title="@string/delete_thread_" android:id="@+id/item_delete_thread"
		android:icon="@android:drawable/ic_menu_delete"
		android:orderInCategory="5" />
</menu>
